--- a/HelloGap/assets/www/css/style.css
+++ b/HelloGap/assets/www/css/style.css
@@ -25,7 +25,7 @@ button {
 	background-color: rgb(230,230,230);
 }
 
-button#email {
+button#send {
 	background-color: rgb(150,150,255);
 	color: white;
 	border: none;
@@ -170,6 +170,17 @@ input[type="text"] {
 	width: 30% !important;
 }
 
+#poidsTotal {
+	font-size: 17px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+#poidsTotal div{
+	font-size: 20px;
+	font-weight: bolder;
+	display: inline-block;
+}
 
 /* RESET */
 span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
