--- a/HelloGap/assets/www/css/style.css
+++ b/HelloGap/assets/www/css/style.css
@@ -6,6 +6,22 @@ body {
 	margin-top: 10px;
 }
 
+#chargement {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	background-color: rgba(255,255,255,0.7);
+	display: none;
+}
+
+#img-loading {
+	width: 150px;
+	margin: auto;
+	display: block;
+}
+
 label{
 	display: block;
 	font-size: 25px;
