--- a/HelloGapTest/src/css/style.css
+++ b/HelloGapTest/src/css/style.css
@@ -11,7 +11,7 @@ body {
 	height: 100%;
 	top: 0;
 	left: 0;
-	position: absolute;
+	position: fixed;
 	background-color: rgba(255,255,255,0.7);
 	display: none;
 }
