--- a/HelloGapTest/src/css/style.css
+++ b/HelloGapTest/src/css/style.css
@@ -1,4 +1,5 @@
 html {
+	width: 100%;
 	background: url("../img/fond.png") repeat;
 }
 body {
@@ -9,7 +10,6 @@ body {
 	margin: 20px auto 35px auto;
 	font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-	position: relative;
 }
 
 /* HEADER */
@@ -23,6 +23,9 @@ body {
 	margin: auto;
 	text-align: center;
 	z-index: 102;
+	-moz-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
 }
 #header h1 {
 	width: 155px;
@@ -41,8 +44,8 @@ body {
 	background: linear-gradient(to bottom, #FFFFFF, #E6E6E6) repeat scroll 0 0 rgba(0, 0, 0, 0);
 	color: #009FE0;
 	border: none;
+	height: 25px;
 }
-
 
 /* CHARGEMENT & IMAGE */
 #chargement {
@@ -62,17 +65,13 @@ body {
 }
 
 #content {
+	margin: 120px auto 0 auto;
 	width: 100%;
-	overflow: hidden;
-	margin-top: 120px;
 }
 
-/* PAGE FORMULAIRE */
-#pageFormulaire {
-	width: 99%;
-	margin: auto;
-}
-#pageFormulaire label, #pageFormulaire span {
+/* CONTENT */
+
+#content label, #content span {
 	display: block;
 	font-size: 25px;
 	color: rgb(100,100,100);
@@ -90,6 +89,9 @@ body {
 	background-color: rgb(150,150,150);
 	z-index: 100;
 	display: none;
+	-moz-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
 }
 
 #scrollerColonne {
@@ -264,7 +266,7 @@ input[type="text"] {
 }
 
 #optionsPoids #infosPoidsRef input, #optionsPoids #infosDLCRef input, .poids .inputs {
-	width: 47%;
+	width: 43%;
 	text-align: right;
 	font-size: 25px;
 }
