--- a/HelloGap/assets/www/css/style.css
+++ b/HelloGap/assets/www/css/style.css
@@ -1,16 +1,61 @@
 html {
-	background: url("../img/fond.bmp") repeat;
+	width: 100%;
+	background: url("../img/fond.png") repeat;
 }
-
 body {
 	width: 95%;
 	max-width: 900px;
 	margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
-	margin-bottom: 35px;
+	margin-right: auto;;
+	margin: 20px auto 35px auto;
+	font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
 }
 
+/* HEADER */
+#header {
+	width: 100%;
+	height: 50px;
+	left: 0;
+    top: 0;
+	position: fixed;
+	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	margin: auto;
+	text-align: center;
+	z-index: 102;
+	-moz-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+}
+#header h1 {
+	width: 155px;
+	padding: 12px;
+	color: #FFFFFF;
+	font-size: 18px;
+	font-weight: 400;
+	border-right: 1px white solid;
+	display: inline-block;
+	cursor: pointer;
+}
+#header h1:first-child {
+	border-left: 1px white solid;
+}
+#header h1.current {
+	background: linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	color: #009FE0;
+	border: none;
+	height: 25px;
+}
+
+/* CHARGEMENT & IMAGE */
 #chargement {
 	width: 100%;
 	height: 100%;
@@ -19,53 +64,104 @@ body {
 	position: fixed;
 	background-color: rgba(255,255,255,0.7);
 	display: none;
-	z-index: 100;
+	z-index: 10000;
 }
-
 #img-loading {
 	width: 150px;
 	margin: auto;
 	display: block;
 }
 
-label{
+/* CONTENT */
+
+.content {
+	margin: 120px auto 0 auto;
+	width: 100%;
+}
+
+.content label, .content span {
 	display: block;
 	font-size: 25px;
-	font-family: sans-serif;
 	color: rgb(100,100,100);
+	font-weight: 400;
 }
 
-button {
-	width: 100%;
-	height: 70px;
-	margin: 10px auto;
-	font-size: 20px;
-	font-family: sans-serif;
-	border: none;
-	border-radius: 3px;
-	color: white;
-	background-color: rgb(100,100,100);
-}
-
-button#send {
-	width: 95%;
-	max-width: 900px;
+/* COLONNE */
+#colonne {
+	width: 200px;
 	position: fixed;
-	margin: auto;
-	bottom: 10px;
-	background-color: rgb(150,150,255);
-	color: white;
-	border: none;
-	opacity: 0.8;
+	left: 0;
+	top: 0;
+	height: 100%;
+	background-color: rgb(150,150,150);
+	z-index: 100;
+	display: none;
+	-moz-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	overflow: auto;
 }
+
+#scrollerColonne {
+	position: fixed;
+	top: 60px;
+	left: 20px;
+	z-index: 101;
+}
+
+#scrollerColonne .barre{
+	width: 45px;
+	height: 8px;
+	background-color: rgb(100,100,100);
+	margin: 7px auto 7px auto;
+}
+
+#contentColonne {
+	width: 180px;
+	margin: 120px auto 0 auto;
+}
+
+#image {
+	width: 100%;
+	margin-top: 5px;
+}
+
+/* BOUTONS */
+button {
+	width: 180px;
+	height: 50px;
+	font-size: 20px;
+	margin: auto;
+	padding: 5px 8px;
+	border-radius: 4px 4px 4px 4px;
+	color: white;
+	background: linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+    border: 1px solid #DF8B13;
+	position: relative;
+	margin-bottom: 15px;
+}
+button#send {
+	margin-top: 15px;
+    border: 1px solid #037BAC;
+	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+}
+
 
 input[type="text"] {
-	width: 100%;
+	width: 96%;
 	height: 50px;
 	margin: 10px auto;
+	padding: 0 2%;
 	display: block;
 	font-size: 30px;
-	font-family: sans-serif;
 	border: 1px solid #aaa;
 	border-radius: 3px;
 	background: #fff;
@@ -133,11 +229,7 @@ input[type="text"] {
 }
 
 
-/***
-*
-* POIDS
-*
-***/
+/* POIDS */
 
 #poidsContainer {
 	display: none;
@@ -161,16 +253,16 @@ input[type="text"] {
 	border: 1px solid rgb(150,150,150);
 	border-radius: 10px;
 	padding: 12px 0 12px 13px;
-	background-image: linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -o-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -moz-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -webkit-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -ms-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
- #optionsPoids #infosPoidsRef, #optionsPoids #infosDLCRef {
+#optionsPoids #infosPoidsRef, #optionsPoids #infosDLCRef {
 	display: none;
 }
 
@@ -190,7 +282,7 @@ input[type="text"] {
 }
 
 #optionsPoids #infosPoidsRef input, #optionsPoids #infosDLCRef input, .poids .inputs {
-	width: 47%;
+	width: 43%;
 	text-align: right;
 	font-size: 25px;
 }
@@ -202,7 +294,6 @@ input[type="text"] {
 
 #optionsPoids #infosPoidsRef div, #optionsPoids #infosDLCRef div, .poids div:not(.inputs) {
 	width: 25%;
-	font-family: sans-serif;
 	color: rgb(100,100,100);
 	text-align: center;
 	margin: 27px 0 27px 0;
