--- a/HelloGapTest/src/css/style.css
+++ b/HelloGapTest/src/css/style.css
@@ -19,7 +19,11 @@ body {
 	left: 0;
     top: 0;
 	position: fixed;
-	background: linear-gradient(to bottom, #009FE0, #018EC8) repeat scroll 0 0 #009FE0;
+	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
 	margin: auto;
 	text-align: center;
 	z-index: 102;
@@ -41,7 +45,11 @@ body {
 	border-left: 1px white solid;
 }
 #header h1.current {
-	background: linear-gradient(to bottom, #FFFFFF, #E6E6E6) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background: linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
 	color: #009FE0;
 	border: none;
 	height: 25px;
@@ -56,7 +64,7 @@ body {
 	position: fixed;
 	background-color: rgba(255,255,255,0.7);
 	display: none;
-	z-index: 100;
+	z-index: 10000;
 }
 #img-loading {
 	width: 150px;
@@ -81,7 +89,6 @@ body {
 /* COLONNE */
 #colonne {
 	width: 200px;
-	overflow: hidden;
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -92,6 +99,7 @@ body {
 	-moz-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
 	-webkit-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
 	box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	overflow: auto;
 }
 
 #scrollerColonne {
@@ -115,7 +123,7 @@ body {
 
 #image {
 	width: 100%;
-	margin-top: 70px;
+	margin-top: 5px;
 }
 
 /* BOUTONS */
@@ -127,15 +135,23 @@ button {
 	padding: 5px 8px;
 	border-radius: 4px 4px 4px 4px;
 	color: white;
-	background: linear-gradient(to bottom, #FBB450, #F89406) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background: linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
     border: 1px solid #DF8B13;
-	position: fixed;
+	position: relative;
 	margin-bottom: 15px;
 }
 button#send {
 	margin-top: 15px;
-	background: linear-gradient(to bottom, #009FE0, #018EC8) repeat scroll 0 0 rgba(0, 0, 0, 0);
     border: 1px solid #037BAC;
+	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
 }
 
 
@@ -237,11 +253,11 @@ input[type="text"] {
 	border: 1px solid rgb(150,150,150);
 	border-radius: 10px;
 	padding: 12px 0 12px 13px;
-	background-image: linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -o-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -moz-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -webkit-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
-	background-image: -ms-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #fff /*{c-bup-background-start}*/, #f1f1f1 /*{c-bup-background-end}*/);
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
