--- a/HelloGap/assets/www/css/style.css
+++ b/HelloGap/assets/www/css/style.css
@@ -1,6 +1,7 @@
 html {
 	width: 100%;
 	background: url("../img/fond.png") repeat;
+	overflow-x: hidden;
 }
 body {
 	width: 95%;
@@ -12,169 +13,7 @@ body {
     font-weight: 300;
 }
 
-/* HEADER */
-#header {
-	width: 100%;
-	height: 50px;
-	left: 0;
-    top: 0;
-	position: fixed;
-	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	margin: auto;
-	text-align: center;
-	z-index: 102;
-	-moz-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
-	-webkit-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
-	box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
-}
-#header h1 {
-	width: 155px;
-	padding: 12px;
-	color: #FFFFFF;
-	font-size: 18px;
-	font-weight: 400;
-	border-right: 1px white solid;
-	display: inline-block;
-	cursor: pointer;
-}
-#header h1:first-child {
-	border-left: 1px white solid;
-}
-#header h1.current {
-	background: linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
-	background: -o-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
-	background: -moz-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
-	background: -webkit-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
-	background: -ms-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
-	color: #009FE0;
-	border: none;
-	height: 25px;
-}
-
-/* CHARGEMENT & IMAGE */
-#chargement {
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: fixed;
-	background-color: rgba(255,255,255,0.7);
-	display: none;
-	z-index: 10000;
-}
-#img-loading {
-	width: 150px;
-	margin: auto;
-	display: block;
-}
-
-/* CONTENT */
-
-.content {
-	margin: 120px auto 0 auto;
-	width: 100%;
-}
-
-.content label, .content span {
-	display: block;
-	font-size: 25px;
-	color: rgb(100,100,100);
-	font-weight: 400;
-}
-
-/* COLONNE */
-#colonne {
-	width: 200px;
-	position: fixed;
-	left: 0;
-	top: 0;
-	height: 100%;
-	background-color: rgb(150,150,150);
-	z-index: 100;
-	display: none;
-	-moz-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
-	-webkit-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
-	box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
-	overflow: auto;
-}
-
-#scrollerColonne {
-	position: fixed;
-	top: 60px;
-	left: 20px;
-	z-index: 101;
-}
-
-#scrollerColonne .barre{
-	width: 45px;
-	height: 8px;
-	background-color: rgb(100,100,100);
-	margin: 7px auto 7px auto;
-}
-
-#contentColonne {
-	width: 180px;
-	margin: 120px auto 0 auto;
-}
-
-a#image img {
-	width: 100%;
-	margin-top: 5px;
-}
-
-/* BOUTONS */
-button {
-	width: 180px;
-	height: 50px;
-	font-size: 20px;
-	margin: auto;
-	padding: 5px 8px;
-	border-radius: 4px 4px 4px 4px;
-	color: white;
-	background: linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
-	background: -o-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
-	background: -moz-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
-	background: -webkit-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
-	background: -ms-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
-    border: 1px solid #DF8B13;
-	position: relative;
-	margin-bottom: 15px;
-}
-button#send {
-	margin-top: 15px;
-    border: 1px solid #037BAC;
-	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
-}
-
-
-input[type="text"] {
-	width: 96%;
-	height: 50px;
-	margin: 10px auto;
-	padding: 0 2%;
-	display: block;
-	font-size: 30px;
-	border: 1px solid #aaa;
-	border-radius: 3px;
-	background: #fff;
-	color: #666;
-	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.15),transparent 0 0 0;
-	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.15),transparent 0 0 0;
-	box-shadow: inset 0 1px 2px rgba(0,0,0,0.15),transparent 0 0 0;
-	-webkit-transition: background .3s ease-in-out;
-	-moz-transition: background .3s ease-in-out;
-	-ms-transition: background .3s ease-in-out;
-	-o-transition: background .3s ease-in-out;
-}
-
+/* GENERAL */
 .clear {
 	clear: both;
 }
@@ -218,9 +57,171 @@ input[type="text"] {
 	float: right;
 }
 
+.labelLeft {
+	float: left;
+	width: 350px;
+}
+
+/* HEADER */
+#header {
+	width: 100%;
+	height: 50px;
+	left: 0;
+    top: 0;
+	position: fixed;
+	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	margin: auto;
+	text-align: center;
+	z-index: 102;
+	-moz-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	box-shadow: 0px 1px 4px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+}
+#header h1 {
+	width: 155px;
+	height: 25px;
+	padding: 12px;
+	color: #FFFFFF;
+	font-size: 18px;
+	font-weight: 400;
+	border-left: 1px #0080b5 solid;
+	border-right: 1px #0080b5 solid;
+	display: inline-block;
+	cursor: pointer;
+	margin-left: -5px;
+}
+#header h1:first-child {
+	margin-left: 0;
+}
+#header h1.current {
+	background: linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #FFFFFF /*{c-bup-background-start}*/, #E6E6E6 /*{c-bup-background-end}*/);
+	color: #009FE0;
+	border: none;
+}
+
+/* CHARGEMENT & IMAGE */
+#chargement {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background-color: rgba(255,255,255,0.7);
+	display: none;
+	z-index: 10000;
+}
+#img-loading {
+	width: 150px;
+	margin: auto;
+	display: block;
+}
+
+/* CONTENT */
+.content {
+	margin: 120px auto 0 auto;
+	width: 100%;
+}
+.content label, .content span {
+	display: block;
+	font-size: 25px;
+	color: rgb(100,100,100);
+	font-weight: 400;
+}
+
+/* COLONNE */
+#colonne {
+	width: 200px;
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	background-color: rgb(150,150,150);
+	z-index: 100;
+	display: none;
+	-moz-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	box-shadow: 1px 1px 5px /*{global-box-shadow-size}*/ rgba(0,0,0,.3) /*{global-box-shadow-color}*/;
+	overflow: auto;
+}
+#scrollerColonne {
+	position: fixed;
+	top: 60px;
+	left: 20px;
+	z-index: 101;
+}
+#scrollerColonne .barre{
+	width: 45px;
+	height: 8px;
+	background-color: rgb(100,100,100);
+	margin: 7px auto 7px auto;
+}
+#contentColonne {
+	width: 180px;
+	margin: 120px auto 0 auto;
+}
+a#image img {
+	width: 100%;
+	margin-top: 5px;
+}
+
+/* BOUTONS */
+button {
+	width: 180px;
+	height: 50px;
+	font-size: 20px;
+	margin: auto;
+	padding: 5px 8px;
+	border-radius: 4px 4px 4px 4px;
+	color: white;
+	background: linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #FBB450 /*{c-bup-background-start}*/, #F89406 /*{c-bup-background-end}*/);
+    border: 1px solid #DF8B13;
+	position: relative;
+	margin-bottom: 15px;
+}
+button#send, button#sendStock {
+	margin-top: 15px;
+    border: 1px solid #037BAC;
+	background: linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -o-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -moz-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -webkit-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+	background: -ms-linear-gradient( #009FE0 /*{c-bup-background-start}*/, #018EC8 /*{c-bup-background-end}*/);
+}
+
+
+input[type="text"] {
+	width: 96%;
+	height: 50px;
+	margin: 10px auto;
+	padding: 0 2%;
+	display: block;
+	font-size: 30px;
+	border: 1px solid #aaa;
+	border-radius: 3px;
+	background: #fff;
+	color: #666;
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.15),transparent 0 0 0;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.15),transparent 0 0 0;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,0.15),transparent 0 0 0;
+	-webkit-transition: background .3s ease-in-out;
+	-moz-transition: background .3s ease-in-out;
+	-ms-transition: background .3s ease-in-out;
+	-o-transition: background .3s ease-in-out;
+}
 
 /* POIDS */
-
 #poidsContainer {
 	display: none;
 }
@@ -307,6 +308,83 @@ input[type="text"] {
 	font-size: 20px;
 	font-weight: bolder;
 	display: inline-block;
+}
+
+/* STOCK */
+#stockQuantity {
+	width: 100px;
+	margin: -9px 0 30px 0;
+	display: inline-block;
+	text-align:right;
+}
+
+.lineProduct {
+	width: 100%;
+	display: inline-block;
+}
+
+input.product {
+	padding-left: 17%;
+	width: 82%;
+}
+
+.lineProductHidden {
+	overflow: hidden;
+}
+
+.lineProductHidden .swiper {
+	border: none;
+	position: relative;
+	margin-right: -10%;
+}
+
+.blocHidden {
+	height: 80px;
+	width: 0;
+	margin-top: -76px;
+	float: right;
+}
+
+.blocHidden div {
+	width: 40px;
+	height: 80px;
+	background: url("../img/fond.png") repeat;
+	-moz-box-shadow: -11px 1px 8px -6px rgba(0,0,0,0.15),transparent 0 0 0;
+	-webkit-box-shadow: -11px 1px 8px -6px rgba(0,0,0,0.15),transparent 0 0 0;
+	box-shadow: -11px 1px 8px -6px rgba(0,0,0,0.15),transparent 0 0 0;
+	position: relative;
+}
+
+.inputsHidden {
+	width: 100%;
+	height: 72px;
+	margin-left: 94%;
+}
+
+.swiper {
+	width: 10%;
+	max-width: 90px;
+	height: 38px;
+	border-right: 1px solid rgb(190,190,190);
+	float: left;
+	position: absolute;
+	margin-top: 18px;
+	margin-left: 1px;
+	border-radius: 3px 0 0 3px;
+}
+
+.swiper div {
+	width: 5px;
+	height: 5px;
+	background-color: rgb(170,170,170);
+	float: right;
+	margin: 6px 13px 0px 0;
+	clear: both;
+}
+
+/* JQUERY AUTOCOMPLETE */
+.ui-menu .ui-menu-item a {
+	font-size: 26px;
 }
 
 /* RESET */
