--- a/A2DisTest/src/css/style.css
+++ b/A2DisTest/src/css/style.css
@@ -299,13 +299,29 @@ input[type="text"] {
 }
 
 #poidsTotal {
+	width: 100%;
 	font-size: 17px;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 20px;
+	text-align: center;
+	color: white;
 }
 
 #poidsTotal div{
-	font-size: 20px;
+	font-size: 22px;
+	font-weight: bolder;
+	display: inline-block;
+}
+
+#DLCTotale {
+	width: 100%;
+	font-size: 17px;
+	margin-top: 20px;
+	text-align: center;
+	color: white;
+}
+
+#DLCTotale div{
+	font-size: 22px;
 	font-weight: bolder;
 	display: inline-block;
 }
@@ -324,8 +340,8 @@ input[type="text"] {
 }
 
 input.product {
-	padding-left: 17%;
-	width: 82%;
+	width: 86%;
+	padding-left: 13%;
 }
 
 .lineProductHidden {
@@ -336,6 +352,7 @@ input.product {
 	border: none;
 	position: relative;
 	margin-right: -10%;
+	width: 15%;
 }
 
 .blocHidden {
@@ -358,13 +375,13 @@ input.product {
 .inputsHidden {
 	width: 100%;
 	height: 72px;
-	margin-left: 94%;
+	margin-left: 87%;
 }
 
 .swiper {
-	width: 10%;
-	max-width: 90px;
+	width: 8%;
 	height: 38px;
+	max-width: 74px;
 	border-right: 1px solid rgb(190,190,190);
 	float: left;
 	position: absolute;
@@ -380,6 +397,20 @@ input.product {
 	float: right;
 	margin: 6px 13px 0px 0;
 	clear: both;
+}
+
+#nbProduitsStock {
+	width: 100%;
+	font-size: 17px;
+	margin-top: 20px;
+	text-align: center;
+	color: white;
+}
+
+#nbProduitsStock div{
+	font-size: 22px;
+	font-weight: bolder;
+	display: inline-block;
 }
 
 /* JQUERY AUTOCOMPLETE */
